compiler/testData/diagnostics/tests/backingField/FieldInInterface.kt
interface My {
    <!BACKING_FIELD_IN_TRAIT!>val x: Int<!> = <!PROPERTY_INITIALIZER_IN_TRAIT!>0<!>
        get() = field
}
